syntax = "proto3";

package techticker.users;

option csharp_namespace = "TechTicker.Grpc.Contracts.Users";

import "google/protobuf/timestamp.proto";

// User Service
service UserGrpcService {
  // Get user by ID
  rpc GetUser(GetUserRequest) returns (UserResponse);
  
  // Get user by email
  rpc GetUserByEmail(GetUserByEmailRequest) returns (UserResponse);
  
  // Validate user credentials
  rpc ValidateUser(ValidateUserRequest) returns (ValidateUserResponse);
  
  // Check if user exists
  rpc UserExists(UserExistsRequest) returns (UserExistsResponse);
  
  // Get user permissions
  rpc GetUserPermissions(GetUserPermissionsRequest) returns (GetUserPermissionsResponse);
}

// Messages for User operations
message GetUserRequest {
  string user_id = 1; // GUID as string
}

message GetUserByEmailRequest {
  string email = 1;
}

message ValidateUserRequest {
  string email = 1;
  string password = 2;
}

message ValidateUserResponse {
  bool is_valid = 1;
  UserResponse user = 2;
}

message UserExistsRequest {
  string user_id = 1;
}

message UserExistsResponse {
  bool exists = 1;
}

message GetUserPermissionsRequest {
  string user_id = 1;
}

message GetUserPermissionsResponse {
  repeated string permissions = 1;
  repeated string roles = 2;
}

message UserResponse {
  string user_id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  bool is_active = 5;
  repeated string roles = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}
